docs: final verification and cleanup, remove review document (PR-8)
Completes the review-26-07-04 remediation. All findings across clusters
1-7 (MOCK-1..14, LIFE-1..9, ASSERT-1..12, API-1..5, BUILD-1..10,
TEST-1..8, DOC-1..15) are verified fixed on main.

- Add doc/migration/4.4.adoc documenting the behaviour changes and
  deprecations (MOCK-1/2/3/4/6/7/8/9/12, LIFE-2/3, PER_CLASS unsupported,
  API-1..5) and link it from README.adoc.
- Apply openrewrite (pre-commit) code cleanups: unused-import removal and
  static-import consolidation across the affected sources and tests.
- Remove doc/review-26-07-04.md now that every finding is fixed.

Verification: clean install, -Ppre-commit clean install, -Pjavadoc
clean install, dependency:analyze, and the test suite run twice — all
green. Residual dependency:analyze warnings (easymock kept for
consumers, junit-jupiter aggregator) are intentional and out of scope.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Y95DNbN4fZHSdaR4wAckzN